# dependencies

./: README.md  build.sbt
gradle-test-project/: .gitignore  WORKSPACE  build.gradle  third_party.bzl
gradle-test-project/a/: BUILD.bazel  build.gradle
gradle-test-project/a/src/main/java/: A.java
gradle-test-project/b/: BUILD.bazel  build.gradle
gradle-test-project/b/src/main/java/: B.java
gradle-test-project/c/: BUILD.bazel  build.gradle
gradle-test-project/c/src/main/java/: C.java
gradle-test-project/gradle/wrapper/: gradle-wrapper.properties
src/main/scala/dependencies/: CLI.scala  MavenDependency.scala  ModelFactory.scala
src/main/scala/dependencies/model/: ArtifactCoordinates.scala  MavenDependencies.scala  MavenDependency.scala
src/main/scala/dependencies/parsing/: DependencyTreeToken.scala  Parser.scala
src/main/scala/dependencies/printing/: DependencyPrinter.scala
