#######################
# Copy the following snippet into any applicable java_binary/java_library
# `deps` sections in the BUILD/BUILD.bazel file for project: c
#######################

package(default_visibility = ["//visibility:public"])
java_library(
    name = "c",
    srcs = glob(["src/main/java/**/*.java"]),
    deps = [
        "//b:b",
        "//third_party:org_apache_commons_commons_lang3",
    ]
)

